--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,11 @@ spring:
     username: root
     password: Lta102103,./
     driver-class-name: com.mysql.jdbc.Driver
-
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+      location: /
 mybatis-plus:
   global-config:
     db-config:
