新增删除权限 新增问题添加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=cmsFile
 
 # ??mybatis-plus??SQL??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.mvc.servlet.path=/api
 
 
