--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,11 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://192.168.88.14/fileServer?useUnicode=true&chaeacterEncoding=UTF-8&serverTimeZone=UTC&useSSL=false
+#    url: jdbc:mysql://192.168.88.14/fileServer?useUnicode=true&chaeacterEncoding=UTF-8&serverTimeZone=UTC&useSSL=false
+    url: jdbc:mysql://localhost/fileServer?useUnicode=true&chaeacterEncoding=UTF-8&serverTimeZone=UTC&useSSL=false
     username: root
-    password: Lta102103,./
+#    password: Lta102103,./
+    password: admin
     driver-class-name: com.mysql.jdbc.Driver
   servlet:
     multipart:
